--- a/grin-py/webui-js/public/index.html
+++ b/grin-py/webui-js/public/index.html
@@ -22,8 +22,8 @@
     work correctly both with client-side routing and a non-root public URL.
     Learn how to configure a non-root public URL by running `npm run build`.
   -->
-  <title>%SITE_TITLE%</title>
-  <meta name="description" content='%META_DESCRIPTION%'>
+  <title>BitGrin Mining Pool</title>
+  <meta name="description" content='A community-driven open source mining pool for BitGrin, a MimbleWimble cryptocurrency implementation. Contributors welcome!'>
   <meta name="google-site-verification" content="%GOOGLE_SITE_VERIFICATION%" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132063819-1"></script>
